--- a/solar-control/rootfs/usr/bin/templates/index.html
+++ b/solar-control/rootfs/usr/bin/templates/index.html
@@ -221,7 +221,7 @@
 
     <script>
         // Get ingress path from the page
-        const ingressPath = "{{ ingress_path }}";
+        // const ingressPath = "{{ ingress_path }}";  // Removing duplicate declaration
         
         // Fetch status from API
         async function updateStatus() {
