more duplicated ingress path and not waiting for DOM to load

--- a/solar-control/rootfs/usr/bin/templates/configure_devices.html
+++ b/solar-control/rootfs/usr/bin/templates/configure_devices.html
@@ -305,7 +305,7 @@
 
     <script>
         // Get ingress path from the page
-        const ingressPath = "{{ ingress_path }}";
+        // const ingressPath = "{{ ingress_path }}";
         
 
         // Tab functionality
