trying to inherit apiCall from base still

--- a/solar-control/rootfs/usr/bin/templates/configure_devices.html
+++ b/solar-control/rootfs/usr/bin/templates/configure_devices.html
@@ -302,12 +302,10 @@
             border-top: 1px solid #ddd;
         }
     </style>
+{% endblock %}
 
+{% block extra_scripts %}
     <script>
-        // Get ingress path from the page
-        // const ingressPath = "{{ ingress_path }}";
-        
-
         // Tab functionality
         document.addEventListener('DOMContentLoaded', function() {
             const tabButtons = document.querySelectorAll('.tab-button');
