--- a/solar-control/rootfs/usr/bin/templates/components/device_card.html
+++ b/solar-control/rootfs/usr/bin/templates/components/device_card.html
@@ -14,11 +14,9 @@
             Today: {{ device.energy_consumption.today|round(2) }} {{ device.energy_consumption.unit }}
         </p>
         {% endif %}
-        {% if device.power_delivered_today %}
         <p class="device-power-delivered">
-            Power Delivered: {{ device.power_delivered_today|round(2) }} Wh
+            Energy Delivered: {{ device.energy_delivered_today|round(2) }} Wh
         </p>
-        {% endif %}
     </div>
     {% if not draggable %}
     <div class="device-actions">
